<resources>
    <string name="app_name">App_Order_Food</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="chungminhnhandan">Chứng minh nhân dân</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangky">Đăng Ký</string>
    <string name="nhaptendangnhap">Vui lòng nhập tên đăng nhập ! </string>
    <string name="nhapmatkhau">Vui lòng nhập mật khẩu !</string>
    <string name="dangkythanhcong">Đăng ký thành công !</string>
    <string name="dangkythatbai">Đăng ký thất bại !</string>
    <string name="ngaysinhmacdinh">1/1/1900</string>
    <string name="trungmadangnhap">Tên đăng nhập đã tồn tại !</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="dangnhapthanhcong">Đăng nhập thành công !</string>
    <string name="dangnhapthatbai">Đăng nhập thất bại !</string>
    <string name="trangchu">Trang Chủ</string>
    <string name="thucdon">Thực Đơn</string>
    <string name="nhanvien">Nhân Viên</string>
    <string name="thongke">Thống Kê</string>
    <string name="caidat">Cài Đặt</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="thembanan">Thêm Bàn Ăn</string>
    <string name="nhaptenbanan">Nhập Tên Bàn Ăn</string>
    <string name="them">Thêm</string>
    <string name="thembananthanhcong">Thêm bàn ăn thành công !</string>
    <string name="thembananthatbai">Thêm bàn ăn thất bại !</string>
    <string name="vuilongnhaptenbanan">Vui lòng nhập tên bàn ăn !</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền</string>
    <string name="themloaithucdon">Thêm loại thực đơn</string>
    <string name="vuilongnhaptenloaimonan">Vui lòng nhập tên loại món ăn !</string>
    <string name="themloaimonanthanhcong">Đã thêm loại món ăn thành công !</string>
    <string name="themloaimonanthatbai">Thêm loại món ăn thất bại !</string>
    <string name="themmonanthanhcong">Thêm món ăn thành công !</string>
    <string name="themmonanthatbai">Thêm món ăn thất bại !</string>
    <string name="vuilongnhapdayduthongtin">Vui lòng nhập đầy đủ thông tin !</string>
    <string name="banchuathemloaimonan">Bạn chưa thêm loại món ăn !</string>
    <string name="xacnhanxoa">Bạn thật sự muốn xóa ?</string>
    <string name="co">Có</string>
    <string name="khong">Không</string>
    <string name="batdaugoimon">Bắt đầu gọi món !</string>
    <string name="goimonthatbai">Gọi món thất bại !</string>
    <string name="nhapsoluongmonan">Nhập số lượng của món ăn</string>
    <string name="soluongphailonhonkhong">Số lượng phải lớn hơn 0 !</string>
    <string name="suabanan">Sửa bàn ăn</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="xoathanhcong">Xóa thành công !</string>
    <string name="xoathatbai">Xóa thất bại !</string>

</resources>
