<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorOrangeButton"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/xacnhanxoa"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"/>


    <LinearLayout
        android:paddingTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/co"
            android:textColor="@color/redColor"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/khong"
            android:textColor="@color/colorGreenButton"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>