<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:weightSum="6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_30sdp"
            android:textColor="@color/whiteColor"
            android:text="@string/themthucdon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edtTenMonAn"
                    android:hint="@string/tenmonan"
                    android:textAlignment="center"
                    android:singleLine="true"
                    android:textColorHint="@color/grayColor"
                    android:background="@color/whiteColor"
                    android:layout_margin="@dimen/_8sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtGiaTien"
                    android:hint="@string/giatien"
                    android:textAlignment="center"
                    android:textColorHint="@color/grayColor"
                    android:background="@color/whiteColor"
                    android:layout_margin="@dimen/_8sdp"
                    android:padding="@dimen/_5sdp"
                    android:numeric="integer"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/spinLoaiThucDon"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_marginLeft="@dimen/_7sdp"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_30sdp">
                    </Spinner>

                    <ImageButton
                        android:id="@+id/ibtnThemLoaiThucDon"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp" />

                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/imgThemHinhAnhThucDon"
                android:layout_weight="1"
                android:background="@drawable/nhanvien"
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_130sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnDongYThemThucDon"
                android:layout_weight="1"
                android:text="@string/dongy"
                android:layout_margin="@dimen/_8sdp"
                android:padding="@dimen/_3sdp"
                android:background="@color/colorGreenButton"
                android:textColor="@color/whiteColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnThoatThemThucDon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@color/colorOrangeButton"
                android:padding="@dimen/_3sdp"
                android:text="@string/thoat"
                android:textColor="@color/whiteColor" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    </LinearLayout>




</LinearLayout>